--- a/message.html
+++ b/message.html
@@ -6,8 +6,9 @@
   <title>Message</title>
 </head>
 <body>
-  <h1>Proviamo</h1>
-  <p>Guarda un po' te cosa mi tocca fare</p>
+  <h1>Let's try and see if it works</h1>
+  <p>It really hurts not being able to text you for days, even when I would need to say important stuff. This morning you texted me you should be able to text me in the evening, I hope I will be able too. I've set up this way as a trial for urgent communication (or for when you're a month in Russia and I'm given a few seconds - when I'm lucky - each day :P sorry, a bit toxic, but I really miss you, and I was hoping that after Korea we would have had some more chances to talk. You mentioned in your long series of messages from Saturday that I knew you would not be able to text the whole weekend... well, it turns out I did not :P not to this extent actually! Let's see if this works, for the future</p>
 </body>
 </html>
+
 
